--- a/jokeviewer/src/main/res/values/strings.xml
+++ b/jokeviewer/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enough">Enough!</string>
+    <string name="another">Another...</string>
 </resources>
