--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="instructions">Press the button for a delicious joke!</string>
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
-
+    <string name="download_error">Oh no! Unable to fetch jokes..</string>
+    <string name="btn_retry">Retry</string>
+    <string name="internet_error">Not connected to internet</string>
 </resources>
